# Fantasy-Football-Project

./: .gitignore  CHECK.yaml  Notes:Technical-writeup.qmd  pyproject.toml  setup_script.sh
data/: nfl-sos.csv  (+24 more)
fantasy-draft/: diagnostics.csv  get_these_birth_dates.csv  pyproject.toml  rankings-long.parquet
fantasy-draft/backend/collectors/: espncollector.py  fantasy-collector.R  ringer-scraper.R  ringer-scrapper.py  yahoocollector.py
fantasy-draft/backend/config/: settings.py
fantasy-draft/backend/models/: basic-value.py  bt-data.py
fantasy-draft/backend/src/: collect-data.py  mergin-data-fantasy-stats.py
fantasy-draft/backend/utils/: exceptions.py
fantasy-draft/data/: add-adp-to-ffverse.parquet  espn_fantasy-2025-08-18.parquet  ffverse-data-2025-08-22.parquet  fpros-fantasy-scoring-2022-dst.csv  fpros-fantasy-scoring-2022-qb.csv  fpros-fantasy-scoring-2022-rb.csv  fpros-fantasy-scoring-2023-dst.csv  fpros-fantasy-scoring-2023-qb.csv  fpros-fantasy-scoring-2023-te.csv  fpros-fantasy-scoring-2024-dst.csv  fpros-fantasy-scoring-2024-rb.csv  fpros-fantasy-scoring-2024-te.csv  fpros-fantasy-scoring-2024-wr.csv  fpros_advanced_stats_qb-2022.csv  fpros_advanced_stats_qb-2023.csv  fpros_advanced_stats_rb-2022.csv  fpros_advanced_stats_rb-2023.csv  fpros_advanced_stats_rb-2024.csv  fpros_advanced_stats_te-2022.csv  fpros_advanced_stats_te-2024.csv  nfl-elo.csv  ringer-ff-rankings.csv  yahoo_fantasy-2025-08-12.parquet  yahoo_fantasy-2025-08-18.parquet
fantasy-draft/diagnostics/: bt-model-sites-intercepts.parquet
fantasy-draft/processed_data/pos=DST/: 0.parquet
fantasy-draft/processed_data/pos=K/: 0.parquet
fantasy-draft/processed_data/pos=QB/: 0.parquet
fantasy-draft/processed_data/pos=RB/: 0.parquet
fantasy-draft/processed_data/pos=TE/: 0.parquet
fantasy-draft/processed_data/pos=WR/: 0.parquet
fantasy-points-projection/expected_points/: Formal-Writeup.html  Formal-Writeup.ipynb  Formal-Writeup.qmd  __init__.py  hello.py  notes.html  notes.qmd  pyproject.toml  run.sh
fantasy-points-projection/expected_points/ffopportunity_models/: chosen_models.parquet
fantasy-points-projection/expected_points/models/: rec-tds-mods.py
fantasy-points-projection/expected_points/ordbeta/: ordbeta.stan
fantasy-points-projection/expected_points/passing-mods/: coach-mod-playground.py  final-mod.py  model-evals.py  prior-predictive-play-callers.py  prior-predictive-sims-yac-pos.py  prior-predictive-sims.py  pymc-lab gp notebook.qmd  receiving-yards-factor-model.py  reception_tds_factors.py  yac-coaching-mod.py  yac-model-player-position-model.py  yac-model.py
fantasy-points-projection/expected_points/passing-mods-sandbox/: plotting-playground.R  rec_tds_ordered_logit_sandbox.py  receiving-yards-sandbox.py  reception_tds_factors-sandox.py
fantasy-points-projection/expected_points/processed_data/: processed_passers_2014.parquet  processed_passers_2015.parquet  processed_passers_2016.parquet  processed_passers_2017.parquet  processed_passers_2018.parquet  processed_passers_2019.parquet  processed_passers_2020.parquet  processed_passers_2021.parquet  processed_passers_2022.parquet  processed_passers_2023.parquet  processed_passers_2024.parquet  processed_rushers_2014.parquet  processed_rushers_2015.parquet  processed_rushers_2016.parquet  processed_rushers_2017.parquet  (+7 more)
projections/: pyproject.toml
projections/sandbox/: bart-playground.py  model-playground.R
projections/scripts/: bart-playground.py  model-playground.R
projections/src/: bart-fantasy-mod.py
rankings/: get-nfl-colors.R  hello.py  pyproject.toml  season_rankings.json  test.parquet
rankings/backend/: .pre-commit-config.yaml  __init__.py  fit-models.py  pyproject.toml  railway.json  season_rankings.json  seasons_rankings.json  webapp.py
rankings/frontend/: package-lock.json  package.json
rankings/scripts/: collect-data.py
(+61 files in other folders)
