[project]
name = "projections"
version = "0.1.0"
requires-python = ">= 3.13.3"
dependencies = [
    "arviz-plots>=0.7.0",
    "lightgbm>=4.6.0",
    "nflreadpy>=0.1.5",
    "nutpie>=0.16.4",
    "optuna>=4.6.0",
    "polars>=1.35.2",
    "preliz>=0.23.0",
    "pyarrow>=22.0.0",
    "pymc>=5.26.1",
    "pymc-bart>=0.11.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "xgboost>=3.1.2",
]
