[project]
name = "rankings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arviz>=0.22.0",
    "fastapi>=0.116.1",
    "nfl-data-py>=0.3.2",
    "nutpie>=0.15.2",
    "pandas>=2.3.2",
    "polars>=1.32.3",
    "preliz>=0.20.0",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.7",
    "pymc>=5.25.1",
    "pymc-extras>=0.4.1",
    "uvicorn>=0.35.0",
]
