[project]
name = "expected-points"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arviz>=0.22.0",
    "great-tables>=0.18.0",
    "matplotlib>=3.10.5",
    "nfl-data-py>=0.3.2",
    "nutpie>=0.15.2",
    "plotnine>=0.15.0",
    "polars>=1.32.3",
    "preliz[full,lab]>=0.20.0",
    "pyjanitor>=0.31.0",
    "pymc>=5.25.1",
    "seaborn>=0.13.2",
]
