[project]
name = "expected-points"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arviz>=0.22.0",
    "bambi>=0.15.0",
    "cmdstanpy>=1.3.0",
    "graphviz>=0.21",
    "great-tables>=0.18.0",
    "jax>=0.7.1",
    "jax-metal>=0.1.1",
    "matplotlib>=3.10.5",
    "nfl-data-py>=0.3.2",
    "nflreadpy>=0.1.3",
    "numpy>=2.2.6",
    "numpyro>=0.19.0",
    "nutpie[pymc]>=0.15.2",
    "plotnine>=0.15.0",
    "polars>=1.32.3",
    "preliz[full,lab]>=0.20.0",
    "pyjanitor>=0.31.0",
    "pymc>=5.25.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "wheel>=0.45.1",
]
